--- a/clusters/openshift.ullberg.family/values.yaml
+++ b/clusters/openshift.ullberg.family/values.yaml
@@ -19,6 +19,9 @@ certificates:
     access_key_id: YOUR_ACCESS_KEY_ID
     secret_access_key: YOUR_SECRET_ACCESS_KEY
 
+config:
+  storageClassName: synology-iscsi
+
 democratic-csi:
   driver:
     config:
