--- a/charts/amd-gpu-operator/templates/subscription.yaml
+++ b/charts/amd-gpu-operator/templates/subscription.yaml
@@ -7,7 +7,7 @@ metadata:
   namespace: openshift-amd-gpu
 spec:
   channel: alpha
-  installPlanApproval: Automatic
+  installPlanApproval: Manual
   name: amd-gpu-operator
   source: community-operators
   sourceNamespace: openshift-marketplace
