--- a/charts/k10-kasten-operator/templates/subscription.yaml
+++ b/charts/k10-kasten-operator/templates/subscription.yaml
@@ -7,7 +7,7 @@ metadata:
   namespace: kasten-io
 spec:
   channel: stable
-  installPlanApproval: Automatic
+  installPlanApproval: Manual
   name: k10-kasten-operator-rhmp
   source: redhat-marketplace
   sourceNamespace: openshift-marketplace
