--- a/charts/kernel-module-management-operator/templates/subscription.yaml
+++ b/charts/kernel-module-management-operator/templates/subscription.yaml
@@ -7,7 +7,7 @@ metadata:
   namespace: openshift-kmm
 spec:
   channel: stable
-  installPlanApproval: Automatic
+  installPlanApproval: Manual
   name: kernel-module-management
   source: redhat-operators
   sourceNamespace: openshift-marketplace
