--- a/charts/kubevirt-hyperconverged-operator/templates/subscription.yaml
+++ b/charts/kubevirt-hyperconverged-operator/templates/subscription.yaml
@@ -7,7 +7,7 @@ metadata:
   namespace: openshift-cnv
 spec:
   channel: stable
-  installPlanApproval: Automatic
+  installPlanApproval: Manual
   name: kubevirt-hyperconverged
   source: redhat-operators
   sourceNamespace: openshift-marketplace
