--- a/charts/node-feature-discovery-operator/templates/subscription.yaml
+++ b/charts/node-feature-discovery-operator/templates/subscription.yaml
@@ -7,7 +7,7 @@ metadata:
   namespace: openshift-nfd
 spec:
   channel: stable
-  installPlanApproval: Automatic
+  installPlanApproval: Manual
   name: nfd
   source: redhat-operators
   sourceNamespace: openshift-marketplace
