--- a/charts/whoogle/values.yaml
+++ b/charts/whoogle/values.yaml
@@ -2,6 +2,20 @@
 # This is a YAML-formatted file.
 # Declare variables to be passed into your templates.
 
+cluster:
+  top_level_domain: example.com
+  name: openshift
+  admin_email: admin@example.com
+  timezone: America/New_York
+
+application:
+  name: Whoogle
+  group: Utilities
+  icon: simple-icons:search
+  image: https://github.com/benbusby/whoogle-search/raw/main/app/static/img/favicon/favicon-96x96.png
+  description: "A self-hosted search engine frontend."
+  port: 5000
+
 nameOverride: ""
 fullnameOverride: ""
 
