--- a/charts/invidious/templates/deployment.yaml
+++ b/charts/invidious/templates/deployment.yaml
@@ -3,7 +3,7 @@ kind: Deployment
 metadata:
   labels:
     app: invidious
-  name: invidious
+  name: invidious2
 spec:
   replicas: 1
   selector:
@@ -40,3 +40,7 @@ spec:
             failureThreshold: 2
             periodSeconds: 30
             timeoutSeconds: 5
+          ports:
+            - containerPort: 3000
+              hostPort: 3000
+              protocol: TCP
