--- a/charts/invidious/templates/deployment.yaml
+++ b/charts/invidious/templates/deployment.yaml
@@ -3,7 +3,7 @@ kind: Deployment
 metadata:
   labels:
     app: invidious
-  name: invidious2
+  name: invidious
 spec:
   replicas: 1
   selector:
@@ -17,6 +17,7 @@ spec:
       containers:
         - name: invidious
           image: quay.io/invidious/invidious:latest
+          serviceaccount: invidious-sa
           env:
             - name: INVIDIOUS_CONFIG
               value: |
