--- a/charts/clusterplex/Chart.yaml
+++ b/charts/clusterplex/Chart.yaml
@@ -1,6 +1,7 @@
 ---
 apiVersion: v2
 description: A Helm chart to install a cluster aware version of the Plex Media Server
+name: clusterplex
 version: 0.1.0
 kubeVersion: ">=1.22.0-0"
 maintainers:
