--- a/charts/clusterplex/templates/clusterplex-transcode-pvc.yaml
+++ b/charts/clusterplex/templates/clusterplex-transcode-pvc.yaml
@@ -10,8 +10,8 @@ spec:
   accessModes: ["ReadWriteMany"]
   persistentVolumeReclaimPolicy: Retain
   nfs:
-    server: {{ .Values.media.nfs.server }}
-    path: {{ .Values.media.nfs.path }}/transcode
+    server: {{ .Values.storage.media.nfs.server }}
+    path: {{ .Values.storage.media.nfs.path }}/transcode
   mountOptions:
     - nfsvers=4.1
     - nconnect=8
