--- a/charts/clusterplex/templates/clusterplex-transcode-pvc.yaml
+++ b/charts/clusterplex/templates/clusterplex-transcode-pvc.yaml
@@ -11,7 +11,7 @@ spec:
   persistentVolumeReclaimPolicy: Retain
   nfs:
     server: {{ .Values.storage.media.nfs.server }}
-    path: {{ .Values.storage.media.nfs.path }}/transcode
+    path: "{{ .Values.storage.media.nfs.path }}/transcode"
   mountOptions:
     - nfsvers=4.1
     - nconnect=8
