--- a/charts/clusterplex/templates/clusterplex-transcode-pvc.yaml
+++ b/charts/clusterplex/templates/clusterplex-transcode-pvc.yaml
@@ -22,6 +22,7 @@ spec:
 ---
 apiVersion: v1
 kind: PersistentVolumeClaim
+metadata:
   name: clusterplex-transcode-pvc
   labels:
     app.kubernetes.io/name: clusterplex-transcode-pvc
