--- a/charts/clusterplex/templates/clusterplex-worker-service-scc.yaml
+++ b/charts/clusterplex/templates/clusterplex-worker-service-scc.yaml
@@ -12,4 +12,4 @@ seLinuxContext:
 supplementalGroups:
   type: RunAsAny
 users:
-- system:serviceaccount:{{.Release.Namespace}}:plex-sa
+- system:serviceaccount:{{.Release.Namespace}}:clusterplex-worker-service
