--- a/charts/clusterplex/templates/clusterplex-worker.yaml
+++ b/charts/clusterplex/templates/clusterplex-worker.yaml
@@ -72,11 +72,11 @@ spec:
           requests:
             cpu: 500m
             memory: 200Mi
-            intel.com/gpu: 1
+            gpu.intel.com/i915: 1
           limits:
             cpu: 3000m
             memory: 800Mi
-            intel.com/gpu: 1
+            gpu.intel.com/i915: 1
       volumes:
       - name: data
         persistentVolumeClaim:
