--- a/charts/clusterplex/templates/clusterplex-worker.yaml
+++ b/charts/clusterplex/templates/clusterplex-worker.yaml
@@ -8,6 +8,7 @@ metadata:
     app.kubernetes.io/part-of: clusterplex
 spec:
   serviceName: clusterplex-worker-service
+  serviceAccountName: clusterplex-worker-service
   replicas: 2
   selector:
     matchLabels:
