--- a/roles/media-server/templates/tautulli.yaml
+++ b/roles/media-server/templates/tautulli.yaml
@@ -45,10 +45,10 @@ spec:
         - name: app-template.service.main.ports.http.port
           value: '8181'
 
-        # renovate: datasource=custom-docker
         - name: app-template.controllers.main.containers.main.image.repository
           value: ghcr.io/onedr0p/tautulli
         - name: app-template.controllers.main.containers.main.image.tag
+        # renovate docker repository=onedr0p/tautulli versioning=semver
           value: 2.13.4
         - name: app-template.controllers.main.containers.main.image.pullPolicy
           value: IfNotPresent
