--- a/.github/renovate.json5
+++ b/.github/renovate.json5
@@ -26,7 +26,7 @@
     "timezone": "America/New_York",
     "customManagers": [
         {
-            "customType": "regex",
+            "customType": "docker-tag-in-yaml",
             "datasourceTemplate": "docker",
             "description": "Update container versions in yaml",
             "fileMatch": [
@@ -38,6 +38,7 @@
         }
     ],
     "enabledManagers": [
-        "regex"
+        "custom.docker-tag-in-yaml",
+        "github-actions"
     ]
 }
