--- a/roles/media-server/templates/bazarr.yaml
+++ b/roles/media-server/templates/bazarr.yaml
@@ -45,6 +45,7 @@ spec:
         - name: app-template.service.main.ports.http.port
           value: '6767'
 
+        # renovate custom-docker versioning=semver
         - name: app-template.controllers.main.containers.main.image.repository
           value: ghcr.io/onedr0p/bazarr
         - name: app-template.controllers.main.containers.main.image.tag
