--- a/roles/media-server/templates/gaps.yaml
+++ b/roles/media-server/templates/gaps.yaml
@@ -45,7 +45,7 @@ spec:
         - name: app-template.service.main.ports.http.port
           value: '8484'
 
-
+        # renovate custom-docker versioning=loose
         - name: app-template.controllers.main.containers.main.image.repository
           value: housewrecker/gaps
         - name: app-template.controllers.main.containers.main.image.tag
