--- a/roles/media-server/templates/sonarr.yaml
+++ b/roles/media-server/templates/sonarr.yaml
@@ -45,7 +45,7 @@ spec:
         - name: app-template.service.main.ports.http.port
           value: '8989'
 
-        # renovate custom-docker versioning=semver
+        # renovate custom-docker versioning=loose
         - name: app-template.controllers.main.containers.main.image.repository
           value: ghcr.io/onedr0p/sonarr
         - name: app-template.controllers.main.containers.main.image.tag
