--- a/.github/renovate.json5
+++ b/.github/renovate.json5
@@ -33,7 +33,7 @@
                 "(^|/)[^\\.]*\\.ya?ml$"
             ],
             "matchStrings": [
-                "#\\s?renovate custom-docker\\s?(?: versioning=(?<versioning>[a-z-]+?))?\\s*- name:.*\\s*value:\\s?(?<depName>.*)\\s*- name:.*\\s*value:\\s?(?<currentValue>.*)"
+                "#\\s?renovate custom-docker\\s?(?: versioning=(?<versioning>[a-z-]+?))?\\n\\s*- name:.*\\s*\\nvalue:\\s?(?<depName>.*)\\n\\s*- name:.*\\s\\n*value:\\s?(?<currentValue>.*)\\n"
             ]
         }
     ],
