--- a/charts/rtlamr2mqtt/templates/scc.yaml
+++ b/charts/rtlamr2mqtt/templates/scc.yaml
@@ -3,6 +3,7 @@ kind: SecurityContextConstraints
 apiVersion: security.openshift.io/v1
 metadata:
   name: rtlamr2mqtt-scc
+allowPrivilegedContainer: true
 fsGroup:
   type: RunAsAny
 runAsUser:
