--- a/charts/rtlamr2mqtt/values.yaml
+++ b/charts/rtlamr2mqtt/values.yaml
@@ -22,13 +22,14 @@ app-template:
             TZ: TIMEZONE
             LISTEN_ONLY: yes
             RTL_MSGTYPE: all
-          volumeMounts:
-            - mountPath: /dev/bus/usb
-              name: usb
-      volumes:
-        - name: usb
-          hostPath:
-            path: /dev/bus/usb
+
+  persistence:
+    backup:
+      type: hostpath
+      path: /dev/bus/usb
+      globalMounts:
+        - path: /dev/bus/usb
+
   serviceAccount:
     name: rtlamr2mqtt-sa
 
