--- a/charts/rtlamr2mqtt/values.yaml
+++ b/charts/rtlamr2mqtt/values.yaml
@@ -24,7 +24,7 @@ app-template:
             RTL_MSGTYPE: all
 
   persistence:
-    backup:
+    usb:
       type: hostpath
       path: /dev/bus/usb
       globalMounts:
