--- a/charts/rtlamr2mqtt/templates/scc.yaml
+++ b/charts/rtlamr2mqtt/templates/scc.yaml
@@ -4,6 +4,7 @@ apiVersion: security.openshift.io/v1
 metadata:
   name: rtlamr2mqtt-scc
 allowPrivilegedContainer: true
+allowHostDirVolumePlugin: true
 fsGroup:
   type: RunAsAny
 runAsUser:
